<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SwipeLeft">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="594dp"
        android:text="@string/title"
        android:textSize="36sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.55">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/soundCharles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operation"
                android:onClick="playSound"

                android:text="@string/Charles"
                android:textColor="#ffffff"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/soundGreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operation"
                android:onClick="playSound"
                android:text="@string/Greg"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/soundRin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operation"
                android:onClick="playSound"
                android:text="@string/Rin"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/soundOli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operation"
                android:onClick="playSound"
                android:text="@string/Oli"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/soundJacob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/operation"
                android:layout_weight="1"
                android:onClick="playSound"
                android:text="@string/Jacob"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/soundLily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operation"
                android:onClick="playSound"
                android:text="@string/Lily"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/soundRichie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/operation"
                android:layout_weight="1"
                android:onClick="playSound"
                android:text="@string/Richie"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/soundWiggy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operation"
                android:onClick="playSound"
                android:text="@string/Wiggy"
                app:backgroundTint="@null" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>